plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.trend-now'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-jooq'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// gemini
	implementation 'com.google.genai:google-genai:1.15.0'

	// swagger 의존성 주입
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	// h2 데이터베이스 (v2.1.214)
	testRuntimeOnly 'com.h2database:h2:2.1.214'

	// p6spy
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1'

	// quartz
	implementation 'org.springframework.boot:spring-boot-starter-quartz:3.2.3'

	// webClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// oauth2 client
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// jwt 관련 라이브러리
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	implementation 'org.springframework:spring-messaging'
	implementation 'org.redisson:redisson-spring-boot-starter:3.27.0'

	// s3
	implementation 'software.amazon.awssdk:s3:2.25.26'

	// caffeine cache
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'

}

tasks.named('test') {
	useJUnitPlatform()
}
